--- a/Admin/offer.html
+++ b/Admin/offer.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>services</title>
+        <title>offers</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.rtlcss.com/bootstrap/v4.2.1/css/bootstrap.min.css" integrity="sha384-vus3nQHTD+5mpDiZ4rkEPlnkcyTP+49BhJ4wJeJunw06ZAp+wzzeBPUXr42fi8If" crossorigin="anonymous">
         <link rel = "stylesheet" href="https://fonts.googleapis.com/css?family=Cairo:400,600,700|Changa:400,500,600,700">
@@ -25,16 +25,17 @@
               <div class="col">
                 <div class="card  mb-4">
                   <div class="card-header border-bottom bg-color-12 text-white">
-                    <h6 class="m-0">الخدمات</h6>
+                    <h6 class="m-0">العروض</h6>
                   </div>
                   <div class="card-body p-0 pb-3 text-center">
                     <table class="table mb-0">
                       <thead class="bg-light">
                         <tr>
-                          <th scope="col" class="border-0">رقم الخدمة </th>
-                          <th scope="col" class="border-0">عنوان الخدمة</th>
-                          <th scope="col" class="border-0">طالب الخدمة </th>
-                          <th scope="col" class="border-0">العرض المقبول</th>
+                          <th scope="col" class="border-0">رقم العرض </th>
+                          <th scope="col" class="border-0">تفاصيل </th>
+                          <th scope="col" class="border-0">تاريخ الاضافة </th>
+                          <th scope="col" class="border-0">مقدم العرض</th>
+                          <th scope="col" class="border-0">الخدمة المقدم عليها</th>
                           <th scope="col" class="border-0"></th>
                           
                             
@@ -43,9 +44,10 @@
                       <tbody>
                         <tr>
                           <td>1</td>
-                          <td>محمد</td>
-                          <td>نص ترجمة</td>
+                          <td>ترجمة نص يتكون من 480 كلمة</td>
+                          <td>18/2/2019</td>
                           <td>اسلام</td>
+                          <td>نص ترجمة</td>
                           <td>
                              <div class="btn-group btn-group-sm">
                              <input type="submit" value="اضافة" name="login" class="btn btn-danger  font-cairo f-18" >
@@ -58,9 +60,10 @@
                         </tr>
                         <tr>
                           <td>2</td>
-                          <td>اسراء</td>
-                          <td>تسويق منتج</td>
+                          <td>منتج </td>
+                          <td>10/3/2019</td>
                           <td>ايثار</td>
+                          <td>تسويق منتج</td>  
                           <td>
                              <div class="btn-group btn-group-sm">
                              <input type="submit" value="اضافة" name="login" class="btn btn-danger  font-cairo f-18" >
@@ -72,9 +75,10 @@
                         </tr>
                         <tr>
                           <td>3</td>
-                          <td>مصطفي</td>
-                          <td>موقع الكتروني</td>
+                          <td>موقع لبيع قطع غيارالسيارات</td>
+                          <td>20/2/2019</td>
                           <td>احمد</td>
+                          <td>موقع الكتروني</td>  
                           <td>
                              <div class="btn-group btn-group-sm">
                              <input type="submit" value="اضافة" name="login" class="btn btn-danger  font-cairo f-18" >
@@ -86,9 +90,10 @@
                         </tr>
                         <tr>
                           <td>4</td>
-                          <td>جيهان</td>
-                          <td>برمجة موقع</td>
+                          <td>برمجة بلغة php </td>
+                          <td>1/3/2019</td>
                           <td>نجلاء</td>
+                          <td>برمجة موقع</td>
                           <td>
                              <div class="btn-group btn-group-sm">
                              <input type="submit" value="اضافة" name="login" class="btn btn-danger  font-cairo f-18" >
