--- a/Admin/index.html
+++ b/Admin/index.html
@@ -119,7 +119,7 @@
                             <div class="col-md-12">
                                 <div class="overview-wrap">
                                     <h2 class="title-1">overview</h2>
-                                    <button class="au-btn au-btn-icon au-btn--blue">
+                                    <button class="au-btn au-btn-icon bg-danger">
                                         <i class="zmdi zmdi-plus"></i>add item</button>
                                 </div>
                             </div>
@@ -327,7 +327,7 @@
                                             </div>
                                         </div>
                                         <div class="au-task__footer">
-                                            <button class="au-btn au-btn-load js-load-btn">load more</button>
+                                            <button class="au-btn au-btn-load js-load-btn bg-danger ">load more</button>
                                         </div>
                                     </div>
                                 </div>
@@ -462,7 +462,7 @@
                                                 </div>
                                             </div>
                                             <div class="au-message__footer">
-                                                <button class="au-btn au-btn-load js-load-btn">load more</button>
+                                                <button class="au-btn au-btn-load js-load-btn bg-danger">load more</button>
                                             </div>
                                         </div>
                                         <div class="au-chat">
