--- a/MobileApp/www/power.html
+++ b/MobileApp/www/power.html
@@ -39,15 +39,7 @@
 </head>
 
 <body>
-    <header>
-        <div class="over"></div>
-        <div class="app">
-            <h1> من كوكب الارض نوسه تحدثكم  </h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">جارى التشغيل</p>
-            </div>
-        </div>
-    </header>
+    <h1>Hi! Pepole </h1>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
