Revert "موبيل ابليكشن"
This reverts commit dfe029578c0040992bcbc5211cb09dd06810ba10.

--- a/MobileApp/platforms/android/app/src/main/assets/www/index.html
+++ b/MobileApp/platforms/android/app/src/main/assets/www/index.html
@@ -42,7 +42,7 @@
     <header>
         <div class="over"></div>
         <div class="app">
-            <h1> من كوكب الارض نوسه تحدثكم  </h1>
+            <h1>منصه للعمل الحر</h1>
             <div id="deviceready" class="blink">
                 <p class="event listening">جارى التشغيل</p>
             </div>
