--- a/MobileApp/www/nav1.html
+++ b/MobileApp/www/nav1.html
@@ -39,29 +39,25 @@
 
     <title>Hello World</title>
 </head>
-
-<body>
+<body class="nav-pag">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-        <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
-        <a href="nav1.html" class="navbar-toggler d-block ">
-            <span class="navbar-toggler-icon"></span>
-        </a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png"></a>
+            <a href="index.html" class="navbar-toggler d-block ">
+                <span class="navbar-toggler-icon"></span>
+            </a>
         </div>
     </nav>
-    <header class=" position-relative">
-        <div class="over"></div>
-        <div class="container">
-            <div class="row ">
-                <div class="col-9 pt-5">
-                    <h3 class="title"><span class="word">إنجز</span> مشاريعك بالاعتماد على توظيف مستقلين محترفين</h3>
-                </div>
-            </div>
+    <main>
+        <div class="container pt-5">
+            <ul class="my-nav">
+                <li><a href="#">الخدمات</a></li>
+                <li><a href="#">من نحن</a></li>
+                <li><a href="#">تسجيل الدخول</a></li>
+                <li><a href="#">تسجيل لاول مره </a></li>
+            </ul>
         </div>
-    </header>
-    <section class="index pt-5 pb-5">
-        <a href="#" class="btn btn-primary ">سجل دخولك لأول مره الأن من هنا</a>
-    </section>
+    </main>
     <script src="js/Jquery.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/popper.min.js"></script>
