--- a/admin/services.html
+++ b/admin/services.html
@@ -57,19 +57,19 @@
                 <div class="container-fluid">
                     <ul class="navbar-mobile__list list-unstyled">
                         <li class="has-sub">
-                            <a class="js-arrow" href="">
+                            <a class="js-arrow" href="#">
                                 <i class="fas fa-tachometer-alt" style="color:tomato;"></i>Dashboard</a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <i class="fas fa-chart-bar"></i>services</a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <i class="fas fa-table"></i>offers</a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <i class="far fa-check-square"></i>Complaints</a>
                         </li>
                         
@@ -90,16 +90,16 @@
                                 <div class="account-wrap">
                                     <div class="account-item clearfix js-item-menu">
                                         <div class="image">
-                                            <img src="images/icon/avatar-01.jpg" alt="" />
+                                            <img src="images/icon/avatar-01.jpg" alt="#" />
                                         </div>
                                         <div class="content">
-                                            <a class="js-acc-btn" href="">john doe</a>
+                                            <a class="js-acc-btn" href="#">john doe</a>
                                         </div>
                                         <div class="account-dropdown js-dropdown">
                                             <div class="info clearfix">
                                                 <div class="image">
                                                     <a href="#">
-                                                        <img src="images/icon/avatar-01.jpg" alt="" />
+                                                        <img src="images/icon/avatar-01.jpg" alt="#" />
                                                     </a>
                                                 </div>
                                                 <div class="content">
@@ -148,19 +148,19 @@
                 <nav class="navbar-sidebar">
                     <ul class="list-unstyled navbar__list">
                         <li class="active has-sub">
-                            <a class="js-arrow" href="">
+                            <a class="js-arrow" href="#">
                                 <i class="fas fa-tachometer-alt"></i>Dashboard</a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <i class="fas fa-chart-bar"></i>services</a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <i class="fas fa-table"></i>offers</a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <i class="far fa-check-square"></i>Complaints</a>
                         </li>
                       
