--- a/Admin/index.html
+++ b/Admin/index.html
@@ -197,10 +197,10 @@
                                     <div class="au-inbox-wrap js-inbox-wrap">
                                         <div class="au-message js-list-load">
                                             <div class="au-message__noti">
-                                                <p>You Have
+                                                <p>لديك
                                                     <span>2</span>
 
-                                                    new messages
+                                                    رسالة جديده
                                                 </p>
                                             </div>
                                             <div class="au-message-list">
@@ -213,12 +213,12 @@
                                                                 </div>
                                                             </div>
                                                             <div class="text">
-                                                                <h5 class="name">John Smith</h5>
-                                                                <p>Have sent a photo</p>
+                                                                <h5 class="name">ايثار احمد</h5>
+                                                                <p>لقد ارسلت صوره</p>
                                                             </div>
                                                         </div>
                                                         <div class="au-message__item-time">
-                                                            <span>12 Min ago</span>
+                                                            <span>منذ 12 دقيقة</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -231,12 +231,12 @@
                                                                 </div>
                                                             </div>
                                                             <div class="text">
-                                                                <h5 class="name">Nicholas Martinez</h5>
-                                                                <p>You are now connected on message</p>
+                                                                <h5 class="name">مصطفي يونس</h5>
+                                                                <p>نشط الان</p>
                                                             </div>
                                                         </div>
                                                         <div class="au-message__item-time">
-                                                            <span>11:00 PM</span>
+                                                            <span>11:00 م</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -249,12 +249,12 @@
                                                                 </div>
                                                             </div>
                                                             <div class="text">
-                                                                <h5 class="name">Michelle Sims</h5>
+                                                                <h5 class="name">احمد ابراهيم</h5>
                                                                 <p>Lorem ipsum dolor sit amet</p>
                                                             </div>
                                                         </div>
                                                         <div class="au-message__item-time">
-                                                            <span>Yesterday</span>
+                                                            <span>الأمس</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -267,12 +267,12 @@
                                                                 </div>
                                                             </div>
                                                             <div class="text">
-                                                                <h5 class="name">Michelle Sims</h5>
+                                                                <h5 class="name">محمد عاطف</h5>
                                                                 <p>Purus feugiat finibus</p>
                                                             </div>
                                                         </div>
                                                         <div class="au-message__item-time">
-                                                            <span>Sunday</span>
+                                                            <span>السبت</span>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -285,7 +285,7 @@
                                                                 </div>
                                                             </div>
                                                             <div class="text">
-                                                                <h5 class="name">Michelle Sims</h5>
+                                                                <h5 class="name">محمد عاطف</h5>
                                                                 <p>Lorem ipsum dolor sit amet</p>
                                                             </div>
                                                         </div>
@@ -303,7 +303,7 @@
                                                                 </div>
                                                             </div>
                                                             <div class="text">
-                                                                <h5 class="name">Michelle Sims</h5>
+                                                                <h5 class="name">محمدعاطف</h5>
                                                                 <p>Purus feugiat finibus</p>
                                                             </div>
                                                         </div>
