--- a/admin/services.html
+++ b/admin/services.html
@@ -176,7 +176,7 @@
                          <div class="row ">
                             <div class="col-md-12">
                                 <!-- DATA TABLE -->
-                               <h1 class="title-1 mb-3  col-2 au-btn au-btn-load js-load-btn bg-danger  ">الخدمات</h1>
+                               <h2 class="bg-color-9 d-inline-block font-700 font-color-2 mb-lg-0 mb-4 px-4 py-2">الخدمات </h2>
                                 
                                 <div class="table-responsive table-responsive-data2">
                                     <table class="table table-data2 mb-5 ">
