--- a/admin/offers.html
+++ b/admin/offers.html
@@ -177,7 +177,7 @@
                          <div class="row ">
                             <div class="col-md-12">
                                 <!-- DATA TABLE -->
-                               <h2 class="title-1 mb-3 col-2 au-btn au-btn-load js-load-btn bg-danger ">العروض</h2>
+                               <h2 class="bg-color-9 d-inline-block font-700 font-color-2 mb-lg-0 mb-4 px-4 py-2">العروض </h2>
                                 
                                 <div class="table-responsive table-responsive-data2">
                                     <table class="table table-data2 ">
