--- a/تعديل صفحة تواصل معنا/owlcarsoual.html
+++ b/تعديل صفحة تواصل معنا/owlcarsoual.html
@@ -20,12 +20,17 @@
             .bg-color-11 {
                        background: #d7d7d9 !important;
                         }
+            .bg-color-12 {
+  background: #2d3c51 !important;
+}
 
 
         </style>
     </head>
-    <body>
-        
+ <body dir='rtl'>
+        <section class="bg-color-12">
+        <div class="container">
+        <h2 class="bg-color-3 d-inline-block mt-5 px-3 py-1 f-30 font-cairo text-light"> الفريق </h2>
         <div class="owl-carousel owl-theme mt-5 mb-5">
     <div class="item">
                <div class="card" >
