--- a/Admin/login.html
+++ b/Admin/login.html
@@ -15,7 +15,7 @@
                   background: #c13543!important;
                         }
             .bg-color-10 {
-                  background: #2d3c51!important;
+                  background: #d7d7d9!important;
                          }
 
            .login {
@@ -44,7 +44,7 @@
                         <input type="password" name="password" required class="form-control rounded-0 px-3 py-3 font-cairo" placeholder="الرقم السري">
                     </div>
                     <div class="form-group pt-4 pb-5">
-                        <a href="#" class="font-cairo"> هل نسيت كلمة السر؟</a>
+                        <a href="#" class="font-cairo text-danger"> هل نسيت كلمة السر؟</a>
                     </div>
                     <input type="submit" value="تسجيل الدخول" name="login" class="btn btn-danger d-block w-100 mb-3 py-2 font-cairo f-18" >
                 </form>
